// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component testing Tabs 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi gFfhsY"
  >
    <div
      class="sc-jSMfEi cNWakk"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-dkzDqf"
    >
      <button
        class="sc-hKMtZM kcIAQG"
        tabindex="0"
        value="hoge"
      >
        <div
          class="sc-ftvSup gIaYWH"
          display="flex"
        >
          <p
            class="sc-bczRLJ cTnYtN sc-eCYdqJ ifgxdx"
            color="#041C33"
            font-size="14px"
          >
            hoge 
          </p>
        </div>
      </button>
      <button
        class="sc-hKMtZM bCWiJq"
        tabindex="-1"
        value="fuga"
      >
        <div
          class="sc-ftvSup gIaYWH"
          display="flex"
        >
          <p
            class="sc-bczRLJ cTnYtN sc-eCYdqJ gmlKiN"
            color="#041C33"
            font-size="14px"
          >
            fuga 
          </p>
        </div>
      </button>
      <div
        class="sc-gKXOVf hvjgAI"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component testing Tabs with badge 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi gFfhsY"
  >
    <div
      class="sc-jSMfEi cNWakk"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-dkzDqf"
    >
      <button
        class="sc-hKMtZM kcIAQG"
        tabindex="0"
        value="hoge"
      >
        <div
          class="sc-ftvSup gTeVeh"
          display="flex"
        >
          <p
            class="sc-bczRLJ cTnYtN sc-eCYdqJ ifgxdx"
            color="#041C33"
            font-size="14px"
          >
            hoge 
          </p>
          <span
            class="sc-iBkjds ejurA"
            color="#FFFFFF"
            font-size="0.65em"
            font-weight="bold"
            type="pill"
          >
            1
          </span>
        </div>
      </button>
      <button
        class="sc-hKMtZM bCWiJq"
        tabindex="-1"
        value="fuga"
      >
        <div
          class="sc-ftvSup gTeVeh"
          display="flex"
        >
          <p
            class="sc-bczRLJ cTnYtN sc-eCYdqJ gmlKiN"
            color="#041C33"
            font-size="14px"
          >
            fuga 
          </p>
          <span
            class="sc-iBkjds qDogj"
            color="#FFFFFF"
            font-size="0.65em"
            font-weight="bold"
            type="pill"
          >
            2
          </span>
        </div>
      </button>
      <button
        class="sc-hKMtZM bCWiJq"
        tabindex="-1"
        value="piyo"
      >
        <div
          class="sc-ftvSup gTeVeh"
          display="flex"
        >
          <p
            class="sc-bczRLJ cTnYtN sc-eCYdqJ gmlKiN"
            color="#041C33"
            font-size="14px"
          >
            piyo 
          </p>
          <span
            class="sc-iBkjds qDogj"
            color="#FFFFFF"
            font-size="0.65em"
            font-weight="bold"
            type="pill"
          >
            3
          </span>
        </div>
      </button>
      <div
        class="sc-gKXOVf hvjgAI"
      />
    </div>
  </div>
</DocumentFragment>
`;
